// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot for a new item 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <h3
      class="title"
    >
      New item
    </h3>
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ul>
        <li>
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/lists"
          >
            Lists
          </a>
        </li>
        <li>
          <a
            href="/lists/2/edit"
          >
            List
          </a>
        </li>
        <li
          class="is-active"
        >
          <a
            aria-current="page"
            href="/lists/2/items/undefined/edit"
          >
            new
          </a>
        </li>
      </ul>
    </nav>
    <form
      action="#"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="title"
        >
          Title
        </label>
        <div
          class="control"
        >
          <input
            data-testid="title"
            name="title"
            type="text"
            value=""
          />
        </div>
        <p
          class="help is-danger"
          data-testid="titleErrors"
        />
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="description"
        >
          Description
        </label>
        <div
          class="control"
        >
          <input
            data-testid="description"
            name="description"
            type="text"
            value=""
          />
        </div>
        <p
          class="help is-danger"
          data-testid="descriptionErrors"
        />
      </div>
      <div
        class="field is-grouped"
      >
        <p
          class="control"
        >
          <button
            class="button"
            data-testid="submit"
            type="submit"
          >
            CREATE
          </button>
        </p>
        <p
          class="control"
        >
          <button
            class="button"
            data-testid="cancel"
            type="button"
          >
            CANCEL
          </button>
        </p>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot for an existing item 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <h3
      class="title"
    >
      Edit item 'item title'
    </h3>
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ul>
        <li>
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/lists"
          >
            Lists
          </a>
        </li>
        <li>
          <a
            href="/lists/2/edit"
          >
            List
          </a>
        </li>
        <li
          class="is-active"
        >
          <a
            aria-current="page"
            href="/lists/2/items/5/edit"
          >
            item title
          </a>
        </li>
      </ul>
    </nav>
    <form
      action="#"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="title"
        >
          Title
        </label>
        <div
          class="control"
        >
          <input
            data-testid="title"
            name="title"
            type="text"
            value="item title"
          />
        </div>
        <p
          class="help is-danger"
          data-testid="titleErrors"
        />
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="description"
        >
          Description
        </label>
        <div
          class="control"
        >
          <input
            data-testid="description"
            name="description"
            type="text"
            value="item description"
          />
        </div>
        <p
          class="help is-danger"
          data-testid="descriptionErrors"
        />
      </div>
      <div
        class="field is-grouped"
      >
        <p
          class="control"
        >
          <button
            class="button"
            data-testid="submit"
            type="submit"
          >
            SAVE
          </button>
        </p>
        <p
          class="control"
        >
          <button
            class="button"
            data-testid="cancel"
            type="button"
          >
            CANCEL
          </button>
        </p>
        <p
          class="control"
        >
          <button
            class="button is-danger"
            data-testid="delete"
            type="button"
          >
            DELETE
          </button>
        </p>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
